Fixed tailwind gap spacing issue

--- a/src/input.css
+++ b/src/input.css
@@ -27,3 +27,7 @@
     font-family: poppins;
     /* color: #ca8a04; */
 }
+
+.gap-ten{
+    gap: 40px;
+}
